--- a/python_code/tft_data_plots.ipynb
+++ b/python_code/tft_data_plots.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fontconfig warning: ignoring UTF-8: not a valid region tag\n",
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "import xarray as xr\n",
     "import ocf_blosc2\n",
@@ -4564,7 +4573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
